--- a/views/details.ejs
+++ b/views/details.ejs
@@ -5,6 +5,7 @@
         </title>
         <link rel="stylesheet" href="/style.css">
         <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
+        <meta name="viewport" content="width=device-width">
     </head>
     <body>
         <h1 id="dig">Digital photo Frame</h1>
@@ -22,7 +23,7 @@
          <input type="submit" value="Sign In" id="submit">
         </form>
         <div id="other">
-        <a href="#" class="formanchor">Forgot password?</a>
+        <a href="/forgotpass" class="formanchor">Forgot password?</a>
         <a href="/signup" class="formanchor" id="newuser">New user?Sign Up here!</a>    
         </div>
       </div> 
