--- a/Public/style.css
+++ b/Public/style.css
@@ -24,7 +24,7 @@
 #showimg
 {
     background: green;
-    width:120px;
+    width:125px;
     padding:10px;
     border:1px green solid;
     border-radius:5px;
@@ -34,7 +34,7 @@
 }
 #formelementdiv
 {
-    width:40%;
+    width:42%;
     margin:auto;
     margin-top:150px;
     border:1px gainsboro solid;
@@ -212,7 +212,6 @@
     color:grey;
     font-family:Open sans;
     font-weight:800;
-    float: left;
 }
 #inter
 {
@@ -230,7 +229,8 @@
     color:black;
     font-family:Assistant;
 }
-#showuserdiv div #usernameshowdiv
+
+#usernameshowdiv
 {
     margin-left:auto;
     border: 1px rgb(223, 223, 92) solid;
@@ -291,16 +291,18 @@
 }
 .user-items
 {
-    width:15%;
-    margin-left:84.7%;
+    width:140px;
+    margin-left:auto;
     margin-top:.3%;
+    margin-right: 1.5%;
     display: none;
 }
 .user-items-hover
 {
-    width:15%;
-    margin-left:84.7%;
+    width:140px;
+    margin-left:auto;
     margin-top:.3%;
+    margin-right: 1.5%;
 }
 #album-list
 {
@@ -343,8 +345,8 @@
     padding:8px;
     border-radius:5px;
     opacity:.7;
-     margin:auto;
-     margin-top: 2%; 
+     margin-top: 2%;
+     margin-bottom: 2%; 
 }
 #editalbumdiv
 {
@@ -389,7 +391,7 @@
 {
     border:1px gainsboro solid;
     border-radius: 5px;
-    width:20%;
+    width:25%;
     margin-left:5px;
     float: left;
     padding-bottom: 5px;
@@ -449,7 +451,7 @@ p
     margin:auto;
     margin-bottom: 3%;
     margin-top:5%;
-    width:45%;
+    width:560px;
 }
 #goback
 {
@@ -460,4 +462,178 @@ p
 #gobackdiv
 {
     margin-top:500px;
+}
+#actual-image
+{
+    width:100%;
+}
+#showactual
+{
+    border:2px rgb(211, 204, 204) solid;
+    margin:auto;
+    width:50%;
+    border-radius:5px;
+}
+#photo-name
+{
+    color:black;
+}
+#photo-desc
+{
+    color:black;
+}
+#digitaldiv
+{
+    width:150px;
+    float: left;
+}
+@media screen and (max-width:720px)
+{
+    #formelementdiv
+    {
+        width:98%;
+        margin:auto;
+        margin-top:150px;
+        border:1px gainsboro solid;
+        padding: 15px;
+        border-radius:5px;
+        padding-bottom: 40px;   
+    }
+    #collections-show
+    {
+    border:1px gainsboro solid;
+    border-radius: 5px;
+    width:45%;
+    padding:5px;
+    float: left;
+    }
+    #collections-show-photos
+   {
+    border:1px gainsboro solid;
+    border-radius: 5px;
+    width:48.5%;
+    margin-left:2px;
+    float: left;
+    padding-bottom: 5px;
+   }
+   #showactual  
+   {
+    border:2px rgb(211, 204, 204) solid;
+    margin:auto;
+    width:70%;
+    border-radius:5px;
+   }
+   #formelementdiv1
+  {
+    width:92%;
+    margin:auto;
+    margin-top:70px;
+    border:1px gainsboro solid;
+    padding: 15px;
+    border-radius:5px;
+    padding-bottom: 40px;
+  }
+  #showimg
+  {
+    background: green;
+    width:125px;
+    padding:10px;
+    border:1px green solid;
+    border-radius:5px;
+    margin: auto;
+    margin-top:550px;
+    opacity:0.6;
+}
+}
+@media screen and (max-width:480px)
+{
+    #collections-show
+    {
+    border:1px gainsboro solid;
+    border-radius: 5px;
+    width:45%;
+    padding:5px;
+    float: left;
+    margin-top:5px;
+    }
+    #collections-show-photos
+   {
+    border:1px gainsboro solid;
+    border-radius: 5px;
+    width:100%;
+    margin-left:5px;
+    float: left;
+    padding-bottom: 5px;
+    margin-top:5px;
+   }
+   #showactual  
+   {
+    border:2px rgb(211, 204, 204) solid;
+    margin:auto;
+    width:100%;
+    border-radius:5px;
+   }
+   #formelementdiv1
+   {
+    width:98%;
+    margin:auto;
+    margin-top:70px;
+    border:1px gainsboro solid;
+    padding: 15px;
+    border-radius:5px;
+    padding-bottom: 40px;
+  }
+  #showimg
+  {
+    background: green;
+    width:125px;
+    padding:10px;
+    border:1px green solid;
+    border-radius:5px;
+    margin: auto;
+    margin-top:550px;
+    opacity:0.6;
+  }
+}
+@media screen and (max-width:360px)
+{
+    #formelementdiv1
+   {
+    width:100%;
+    margin:auto;
+    margin-top:70px;
+    border:1px gainsboro solid;
+    padding: 15px;
+    border-radius:5px;
+    padding-bottom: 40px;
+}
+    #collections-show
+    {
+    border:1px gainsboro solid;
+    border-radius: 5px;
+    width:95%;
+    padding:5px;
+    float: left;
+    }
+    #collections-show-photos
+   {
+    border:1px gainsboro solid;
+    border-radius: 5px;
+    width:100%;
+    margin-left:5px;
+    float: left;
+    padding-bottom: 5px;
+    margin-top:3px;
+   }
+   #showimg
+  {
+    background: green;
+    width:125px;
+    padding:10px;
+    border:1px green solid;
+    border-radius:5px;
+    margin: auto;
+    margin-top:550px;
+    opacity:0.6;
+  }
 }
