--- a/views/createphoto.ejs
+++ b/views/createphoto.ejs
@@ -5,6 +5,7 @@
         </title>
         <link rel="stylesheet" href="/style.css">
         <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro" rel="stylesheet">
+        <meta name="viewport" content="width=device-width,initial-scale=1.0,user-scalable=false">
     </head>
     <body>
         <h1>Upload photo</h1>
