--- a/views/landing.ejs
+++ b/views/landing.ejs
@@ -6,6 +6,7 @@
       <link rel="stylesheet" href="/style.css">
       <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
       <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
+      <meta name="viewport" content="width=device-width,initial-scale=1.0">
   </head>
   <body id="landing">
      <div class="divimg">
