--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -6,6 +6,7 @@
         <link rel="stylesheet" href="/style.css">
         <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
         <script src="/Check.js"></script>
+        <meta name="viewport" content="width=device-width,initial-scale=1.0,user-scalable=false">
     </head>
     <body>  
      <div id="signupdiv">
